# This file documents the revision history for Perl extension Catalyst.

  Bug fixes:
   - Remove the erroneous --detach option from Catalyst::Script::FastCGI
   - --daemon option to Catalyst::Script::FastCGI is fixed.

5.80016 2009-12-11 23:23:33

  Bug fixes:

   - Fix slurping a file to work correctly with binary on Win32 in the
     encoding test controller.

  Bug fixes in the new scripts (for applications which have been upgraded):

   - Allow --restartdirectory as an option for the Server script, for
     backwards compatibility. (Dave Rolsky)
   - The --host option for the server script defaulted to localhost, rather
     than listening on all interfaces, which was the previous default. (Dave
     Rolsky)
   - Restore -p option for pid file in the FastCGI server script.
   - Fix the script environment variables MYAPP_PORT and MYAPP_RELOAD RT#52604
   - Fix aliasing applications under non-root paths with mod_rewrite in
     some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
     the script, by using $ENV{REDIRECT_URL} which contains the non-rewritten
     URI.
   - Fix usage display when myapp_create.pl is run with no arguments. RT#52630

  New features:

   - The __MOP__ hash element is suppressed from being dumped fully
     (and instead stringified) when dumping the error screen to be
     less packed with information of no use.

  Documentation:

   - Fix Pod nits (RT#52370)

5.80015 2009-12-02 15:13:54
  Bug fixes:
   - Fix bug in Catalyst::Engine which would cause a request parsing to end
     prematurely in the hypothetical case where calling $engine->read returned
     the single character '0'.
   - Fix failing tests when combined with new HTTP::Request::AsCGI

  Documentation:
   - Improved documentation on read and read_chunk methods in Catalyst::Engine.
   - Fix reversal of SCRIPT_NAME and PATH_INFO in previously correct nginx
     FastCGI documentation introduced in _02.

5.80014_02 2009-12-01 00:55:23
  Bug fixes: